Fixed vcenter alignment on mobile

--- a/tranchui-latest.css
+++ b/tranchui-latest.css
@@ -230,6 +230,18 @@ input {
     display: none;
   }
 
+  .vcenter {
+    position: absolute;
+    top: 30%;
+    margin-top: -5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0;
+    animation: slideLeft 500ms;
+  }
+
   ul.navbar {
     display: flex;
     flex-direction: column;
